[package]
name = "dandelion"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
async-trait = "0.1"
flate2 = "1.0.30"
rand = "0.8"
noise = "0.9"
dashmap = "6.0"
